--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "appium-plugin-template",
+  "name": "appium-gesture-demo-plugin",
   "version": "1.0.0",
   "description": "",
-  "main": "./lib/index.js",
+  "main": "./lib/src/index.js",
   "scripts": {
     "build": "npx tsc",
     "prepublish": "npx tsc",
@@ -46,7 +46,7 @@
     "typescript": "^4.2.3"
   },
   "appium": {
-    "pluginName": "gestures",
+    "pluginName": "gestures-demo",
     "mainClass": "GesturesPlugin"
   },
   "engines": {
