--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "build": "npx tsc",
+    "test": "mocha --require ts-node/register test/plugin.spec.js --timeout 60000 --exit",
     "prepublish": "npx tsc",
     "lint": "eslint '**/*.js' --fix",
     "prettier": "prettier '**/*.js' --write --single-quote",
@@ -37,6 +38,8 @@
     "@types/lodash": "^4.14.170",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.6.1",
+    "appium-fake-driver": "^2.2.0",
+    "appium-uiautomator2-driver": "^2.12.6",
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.0",
     "eslint": "^7.23.0",
@@ -48,8 +51,9 @@
     "mocha": "^8.3.2",
     "prettier": "^2.0.5",
     "sinon": "^11.0.0",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.2.3"
+    "ts-node": "^10.9.1",
+    "typescript": "4.7.4",
+    "webdriverio": "7.20.9"
   },
   "appium": {
     "pluginName": "template-plugin",
