--- a/package.json
+++ b/package.json
@@ -24,11 +24,7 @@
   ],
   "license": "ISC",
   "peerDependencies": {
-    "appium": "^2.0.0-beta.57"
-  },
-  "dependencies": {
-    "@appium/base-plugin": "^2.2.1",
-    "@appium/support": "^3.1.5"
+    "appium": "2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
@@ -68,8 +64,8 @@
     }
   },
   "engines": {
-    "node": ">=10",
-    "npm": ">=6"
+    "node": ">=16",
+    "npm": ">=8"
   },
   "lint-staged": {
     "src/*.{js,jsx,ts,tsx,json,css,scss,md}": [
