--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "android-apidemos": "^4.1.1",
+    "appium-espresso-driver": "^2.25.3",
+    "appium-uiautomator2-driver": "^2.29.5",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "mocha": "^8.3.2",
@@ -81,5 +84,8 @@
   },
   "files": [
     "lib"
-  ]
+  ],
+  "dependencies": {
+    "axios": "^0.27.0"
+  }
 }
